--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -17,15 +17,17 @@
 {{ range .AlternativeOutputFormats -}}
 {{ printf `<link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .Permalink $title | safeHTML }}
 {{ end -}}
-{{ $icon := resources.Get "images/avatar.jpg" | resources.Fingerprint }}
-<link rel='icon' type='image/png' href='{{ $icon.Permalink }}' />
-{{ if .Site.IsServer }}
+{{ with resources.Get "images/avatar.jpg" }}
+    {{ $icon := . | resources.Fingerprint }}
+    <link rel='icon' type='image/png' href='{{ $icon.Permalink }}' />
+{{ end }}
+{{ if hugo.IsServer }}
 {{ $seed := "weqklrjfmnk213409ufasdfhnlk3j4bladsfsl" }}
 {{ $random := delimit (shuffle (split (md5 $seed) "" )) "" }}
-{{ $style := resources.Get "styles/base.css" | resources.PostCSS | resources.ExecuteAsTemplate (printf "tailwind.dev.%s.css" $random) $random }}
+{{ $style := resources.Get "styles/base.css" | css.PostCSS | resources.ExecuteAsTemplate (printf "tailwind.dev.%s.css" $random) $random }}
 <link rel="stylesheet" href="{{ $style.RelPermalink }}" />
 {{ else }}
-{{ $style := resources.Get "styles/base.css" | resources.PostCSS | resources.Minify }}
+{{ $style := resources.Get "styles/base.css" | css.PostCSS | resources.Minify }}
 <link rel="stylesheet" href="{{ $style.RelPermalink }}" />
 {{ end }}
 {{ $script := resources.Get "scripts/base.js" | js.Build (dict "minify" true) | resources.Minify | resources.Fingerprint }}
