--- a/layouts/404.html
+++ b/layouts/404.html
@@ -5,18 +5,7 @@
 {{ define "main" }}
 <main>
   <section class="content">
-    <blockquote>
-      Desolate and lone<br>
-      All night long on the lake<br>
-      Where fog trails and mist creeps,<br>
-      The whistle of a boat<br>
-      Calls and cries unendingly,<br>
-      Like some lost child<br>
-      In tears and trouble<br>
-      Hunting the harbor&rsquo;s breast<br>
-      And the harbor&rsquo;s eyes.<br>
-      <cite><i>Lost</i> by Carl Sandburg, c. 1914</cite>
-    </blockquote>
+    Hard to find, harder to keep.
   </section>
 </main>
 {{ end }}
