--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -4,7 +4,7 @@
     {{ partial "head.html" . }}
   </head>
   {{ if (eq ($.Param "redirect") nil) }}
-  <body class="bg-neutral-000 dark:bg-neutral-800">
+  <body class="bg-neutral-000 dark:bg-slate-700">
     <section class="max-w-6xl mx-auto p-4 min-h-screen">
       <div class="md:flex md:justify-center md:mt-12 lg:mt-28 transition-all">
         <aside class="self-start md:sticky-top md:top-12 overflow-visible">
