--- a/layouts/partials/navigation.html
+++ b/layouts/partials/navigation.html
@@ -3,14 +3,14 @@
 <a class="flex justify-end md:w-full md:mb-12" href="/">
     {{ with resources.Get "images/avatar.png" }}
         {{ $img := . | resources.Fingerprint }}
-        <img class="rounded-full group-hover:rotate-12 duration-500 transition-all h-8 w-8 md:h-12 md:w-12" alt="A circular photo of Miles; links to home." src="{{ $img.Permalink }}" />
+        <img class="rounded-full group-hover:rotate-12 duration-500 transition-all h-8 w-8 md:h-12 md:w-12 object-cover" alt="A photo of Leon" src="{{ $img.Permalink }}" />
     {{ end }}
 </a>
   <div class="text-right md:mt-4 opacity-[69%] group-hover:opacity-100 transition-all duration-300">
     <div class="md:text-right">
       <ul class="-ml-2 md:ml-0 flex md:flex-col gap-4 md:gap-1">
         {{ range .Site.Menus.main }}
-        <li class="self-end font-medium text-neutral-400 dark:text-neutral-400 hover:!text-neutral-800 hover:dark:!text-neutral-100 transition-all {{ if hasPrefix $currentPage.RelPermalink .URL }} !text-neutral-800 dark:!text-neutral-100 {{ end }}">
+        <li class="self-end font-medium text-neutral-400 dark:text-neutral-400 hover:!text-neutral-800 hover:dark:!text-neutral-100 transition-all {{ if eq $currentPage.RelPermalink .URL }} !text-neutral-800 dark:!text-neutral-100 {{ end }}">
           <a href="{{ .URL }}">
             {{ .Pre }}
             <span>{{ .Name }}</span>
