--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -17,7 +17,7 @@
 {{ range .AlternativeOutputFormats -}}
 {{ printf `<link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .Permalink $title | safeHTML }}
 {{ end -}}
-{{ with resources.Get "images/avatar.png" }}
+{{ with resources.Get "static/avatar.png" }}
     {{ $icon := . | resources.Fingerprint }}
     <link rel='icon' type='image/png' href='{{ $icon.Permalink }}' />
 {{ end }}
