--- a/layouts/partials/navigation.html
+++ b/layouts/partials/navigation.html
@@ -1,7 +1,7 @@
 {{ $currentPage := . }}
 <nav class="flex justify-between w-full group items-center md:block mb-12 md:mb-0" aria-label="navigation">
 <a class="flex justify-end md:w-full md:mb-12" href="/">
-    {{ with resources.Get "static/avatar.png" }}
+    {{ with resources.Get "images/avatar.png" }}
         {{ $img := . | resources.Fingerprint }}
         <img class="rounded-full group-hover:rotate-12 duration-500 transition-all h-8 w-8 md:h-12 md:w-12 object-cover" alt="A photo of Leon" src="{{ $img.Permalink }}" />
     {{ end }}
