--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -10,7 +10,15 @@
 <main class="-mt-[3px]">
     {{ if (gt (len .Content) 0) }}
     <section class="mb-12 content">
+        {{ if (isset .Params "gif") }}
+        <div class="portfolio-preview">
+            {{ $gif := resources.Get (printf "gifs/%s" .Params.gif) }}
+            <img class="portfolio-gif" src="{{ $gif.RelPermalink }}" alt="Preview of {{ .Title }}">
+            {{ .Content }}
+        </div>
+        {{ else }}
         {{ .Content }}
+        {{ end }}
     </section>
     {{ end }}
     <section>
